// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ==================== Models ====================

model Building {
  building_id String   @id @default(uuid())
  name        String
  address     String
  latitude    Decimal  @db.Decimal(10, 8)
  longitude   Decimal  @db.Decimal(11, 8)
  model_urn   String
  branch_id   String?
  created_at  DateTime @default(now())
  updated_at  DateTime @updatedAt

  floors                Floor[]
  projects              Project[]
  branch                Organization?        @relation("BuildingBranch", fields: [branch_id], references: [organization_id])
  elementFloorMappings  ElementFloorMapping[]

  @@map("building")
}

model Floor {
  floor_id      String   @id @default(uuid())
  building_id   String
  name          String
  floor_number  Int
  elevation     Decimal? @db.Decimal(10, 2)
  created_at    DateTime @default(now())
  updated_at    DateTime @updatedAt

  building              Building              @relation(fields: [building_id], references: [building_id], onDelete: Cascade)
  issues                Issue[]
  elementFloorMappings  ElementFloorMapping[]

  @@unique([building_id, floor_number])
  @@map("floor")
}

model Project {
  project_id   String   @id @default(uuid())
  building_id  String
  name         String
  start_date   DateTime
  due_date     DateTime
  status       String
  plan         String   @default("")
  branch_id    String?
  created_at   DateTime @default(now())
  updated_at   DateTime @updatedAt

  building Building       @relation(fields: [building_id], references: [building_id], onDelete: Cascade)
  issues   Issue[]
  branch   Organization?  @relation("ProjectBranch", fields: [branch_id], references: [organization_id])

  @@map("project")
}

model Organization {
  organization_id String   @id @default(uuid())
  name            String
  type            String
  parent_id       String?
  created_at      DateTime @default(now())
  updated_at      DateTime @updatedAt

  parent    Organization?  @relation("OrgHierarchy", fields: [parent_id], references: [organization_id])
  children  Organization[] @relation("OrgHierarchy")
  users     User[]
  buildings Building[]    @relation("BuildingBranch")
  projects  Project[]     @relation("ProjectBranch")

  @@map("organization")
}

model User {
  user_id         String   @id @default(uuid())
  organization_id String
  name            String
  email           String   @unique
  password_hash   String
  role            String
  is_active       Boolean  @default(true)
  created_at      DateTime @default(now())
  updated_at      DateTime @updatedAt

  organization Organization @relation(fields: [organization_id], references: [organization_id], onDelete: Cascade)
  reported_issues Issue[] @relation("IssueReporter")
  assigned_issues Issue[] @relation("IssueAssignee")
  status_change_logs StatusChangeLog[] @relation("StatusChangeLogChanger")

  @@map("user")
}

model Issue {
  issue_id           String   @id @default(uuid())
  project_id         String
  floor_id           String
  title              String
  description        String
  issue_type         String?
  status             String
  due_date           DateTime
  location_type      String
  db_id              Int?
  world_position_x   Decimal? @db.Decimal(10, 2)
  world_position_y   Decimal? @db.Decimal(10, 2)
  world_position_z   Decimal? @db.Decimal(10, 2)
  priority           String   @default("MEDIUM")
  reported_by        String
  assignee_id        String?
  created_at         DateTime @default(now())
  updated_at         DateTime @updatedAt

  project  Project @relation(fields: [project_id], references: [project_id], onDelete: Cascade)
  floor    Floor   @relation(fields: [floor_id], references: [floor_id], onDelete: Cascade)
  reporter User    @relation("IssueReporter", fields: [reported_by], references: [user_id])
  assignee User?   @relation("IssueAssignee", fields: [assignee_id], references: [user_id])
  photos   Photo[]
  status_change_logs StatusChangeLog[]

  @@map("issue")
}

model Photo {
  photo_id    String   @id @default(uuid())
  issue_id    String
  blob_key    String
  photo_phase String
  uploaded_at DateTime @default(now())

  issue Issue @relation(fields: [issue_id], references: [issue_id], onDelete: Cascade)

  @@map("photo")
}

model StatusChangeLog {
  log_id      String   @id @default(uuid())
  issue_id    String
  from_status String
  to_status   String
  changed_by  String
  comment     String?
  changed_at  DateTime @default(now())

  issue           Issue @relation(fields: [issue_id], references: [issue_id], onDelete: Cascade)
  changed_by_user User  @relation("StatusChangeLogChanger", fields: [changed_by], references: [user_id])

  @@map("status_change_log")
}

model ElementFloorMapping {
  building_id        String
  db_id              Int
  floor_id           String
  bounding_box_min_z Decimal? @db.Decimal(10, 2)
  created_at         DateTime @default(now())
  updated_at         DateTime @updatedAt

  building Building @relation(fields: [building_id], references: [building_id], onDelete: Cascade)
  floor    Floor    @relation(fields: [floor_id], references: [floor_id], onDelete: Cascade)

  @@id([building_id, db_id])
  @@map("element_floor_mapping")
}
