erDiagram
    organization {
        string organization_id PK
        string name
        string type "HEADQUARTERS | BRANCH"
        string parent_id FK "nullable, self-ref"
        datetime created_at
        datetime updated_at
    }

    user {
        string user_id PK
        string organization_id FK
        string name
        string email "unique"
        string password_hash
        string role "ADMIN | SUPERVISOR | WORKER"
        boolean is_active
        datetime created_at
        datetime updated_at
    }

    building {
        string building_id PK
        string branch_id FK "nullable, Organization"
        string name
        string address
        decimal latitude
        decimal longitude
        string model_urn "APS BIM URN"
        datetime created_at
        datetime updated_at
    }

    floor {
        string floor_id PK
        string building_id FK
        string name "1F, B1F, RF etc."
        int floor_number "for sort"
        decimal elevation "nullable, Z height"
        datetime created_at
        datetime updated_at
    }

    project {
        string project_id PK
        string building_id FK
        string branch_id FK "nullable, Organization"
        string name
        string plan "free text"
        datetime start_date
        datetime due_date
        string status "PLANNING | ACTIVE | COMPLETED"
        datetime created_at
        datetime updated_at
    }

    issue {
        string issue_id PK
        string project_id FK
        string floor_id FK
        string reported_by FK "User"
        string assignee_id FK "nullable, User"
        string title
        string description
        string issue_type "nullable: QUALITY | SAFETY | CONSTRUCTION | DESIGN"
        string status "POINT_OUT | OPEN | IN_PROGRESS | DONE | CONFIRMED"
        string priority "LOW | MEDIUM | HIGH | CRITICAL"
        datetime due_date
        string location_type "dbId | worldPosition"
        int db_id "nullable"
        decimal world_position_x "nullable"
        decimal world_position_y "nullable"
        decimal world_position_z "nullable"
        datetime created_at
        datetime updated_at
    }

    photo {
        string photo_id PK
        string issue_id FK
        string blob_key "storage key path"
        string photo_phase "BEFORE | AFTER | REJECTION"
        datetime uploaded_at
    }

    status_change_log {
        string log_id PK
        string issue_id FK
        string changed_by FK "User"
        string from_status
        string to_status
        string comment "nullable"
        datetime changed_at
    }

    element_floor_mapping {
        string building_id PK_FK
        int db_id PK "Viewer element ID"
        string floor_id FK
        decimal bounding_box_min_z "nullable"
        datetime created_at
        datetime updated_at
    }

    organization ||--o{ organization : "parent_id (HQ -> Branch)"
    organization ||--o{ user : "organization_id"
    organization ||--o{ building : "branch_id"
    organization ||--o{ project : "branch_id"
    building ||--o{ floor : "building_id"
    building ||--o{ project : "building_id"
    building ||--o{ element_floor_mapping : "building_id"
    floor ||--o{ issue : "floor_id"
    floor ||--o{ element_floor_mapping : "floor_id"
    project ||--o{ issue : "project_id"
    user ||--o{ issue : "reported_by"
    user ||--o{ issue : "assignee_id"
    user ||--o{ status_change_log : "changed_by"
    issue ||--o{ photo : "issue_id"
    issue ||--o{ status_change_log : "issue_id"
